--- a/validacaoDeFormCustomizada/index.html
+++ b/validacaoDeFormCustomizada/index.html
@@ -20,7 +20,7 @@
       <h2>Entrar na lista</h2>
 
       <div class="input">
-        <input type="text" id="teste" required />
+        <input type="text" required />
         <label>Nome</label>
         <span class="error"></span>
       </div>
